--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,37 @@
   align-items: center;
   padding: 40px;
 
+  .how {
+
+    h2 {
+      margin-bottom: 0;
+    } 
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 30px;
+    max-width: 60vw;
+  }
+
   .table {
     min-width: 600px;
     display: flex;
     flex-direction: column;
     margin-top: 20px;
+    border: solid 1px #d9d9d9;
 
     .row {
       width: 100%;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
+      border-bottom: solid 1px #d9d9d9;
+
+      > * {
+        border-right: solid 1px #d9d9d9;
+        padding: 3px 8px;
+      }
 
       &.header {
         background: #d9d9d9;
